FEAT: Add password visibility toggle (eye icon) to all login modals
- Added togglePassword() function to 4 pages
- Added password-container and password-toggle CSS styles
- Implemented in all password fields:
  * panel-empresa.html (login modal)
  * panel-proveedores.html (supplier portal login)
  * panel-asociados.html (associate portal login)
  * partner-register.html (password + confirm password)
- Eye icon 👁️ changes to 🙈 when showing password
- Maintains focus and cursor position after toggle

--- a/backend/public/panel-asociados.html
+++ b/backend/public/panel-asociados.html
@@ -905,6 +905,30 @@
             font-size: 0.8rem;
             color: var(--text-secondary);
         }
+
+        /* Password toggle styles */
+        .password-container {
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .password-toggle {
+            position: absolute;
+            right: 12px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
+            color: #666;
+            z-index: 10;
+            padding: 4px;
+            line-height: 1;
+        }
+
+        .password-toggle:hover {
+            color: var(--accent-blue);
+        }
     </style>
 </head>
 <body>
@@ -935,13 +959,17 @@
 
                 <div class="form-group">
                     <label class="form-label">Contrase&ntilde;a</label>
-                    <input
-                        type="password"
-                        id="loginPassword"
-                        class="form-control-dark"
-                        placeholder="Tu contrase&ntilde;a"
-                        required
-                    >
+                    <div class="password-container">
+                        <input
+                            type="password"
+                            id="loginPassword"
+                            class="form-control-dark"
+                            placeholder="Tu contrase&ntilde;a"
+                            required
+                            style="padding-right: 40px;"
+                        >
+                        <button type="button" class="password-toggle" onclick="togglePassword('loginPassword', this)">👁️</button>
+                    </div>
                 </div>
 
                 <button type="submit" id="loginBtn" class="btn-login">
@@ -1496,6 +1524,25 @@
     <!-- Scripts -->
     <script src="js/port-config.js"></script>
     <script>
+        // ============================================
+        // 👁️ PASSWORD TOGGLE FUNCTION
+        // ============================================
+        function togglePassword(inputId, button) {
+            const input = document.getElementById(inputId);
+            const isPassword = input.type === 'password';
+
+            input.type = isPassword ? 'text' : 'password';
+            button.textContent = isPassword ? '🙈' : '👁️';
+
+            // Mantener el foco en el input
+            input.focus();
+
+            // Posicionar el cursor al final del texto
+            setTimeout(() => {
+                input.selectionStart = input.selectionEnd = input.value.length;
+            }, 0);
+        }
+
         // ============================================
         // GLOBAL STATE
         // ============================================
