--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -5679,29 +5679,30 @@
             { id: 'notifications-enterprise', name: '🔔 Notificaciones Enterprise IA', icon: '🤖' },
             { id: 'attendance', name: 'Asistencia', icon: '📋' },
             { id: 'predictive-workforce', name: 'Analytics Predictivo', icon: '🔮' },
-            { id: 'facial-biometric', name: 'Biometría Analítica', icon: '🎭' },{ id: 'medical', name: 'Médico', icon: '👩‍⚕️' },
+            { id: 'facial-biometric', name: 'Biometría Analítica', icon: '🎭' },
+            { id: 'medical', name: 'Gestión Médica', icon: '👩‍⚕️' },
             { id: 'art-management', name: 'ART', icon: '🏥' },
             { id: 'dms-dashboard', name: 'Gestión Documental (DMS)', icon: '📁' },
-            { id: 'legal-dashboard', name: 'Gestión Legal', icon: '⚖️' },
-            { id: 'compliance-dashboard', name: 'Inteligencia de Riesgos', icon: '🛡️' },
+            { id: 'legal-dashboard', name: 'Legal', icon: '⚖️' },
+            { id: 'compliance-dashboard', name: 'Compliance Legal', icon: '🛡️' },
             { id: 'hse-management', name: 'Seguridad e Higiene Laboral (HSE)', icon: '🛡️' },
-            { id: 'sla-tracking', name: 'Seguimiento de SLA', icon: '📊' },
+            { id: 'sla-tracking', name: 'SLA Tracking', icon: '📊' },
             { id: 'audit-reports', name: 'Reportes Auditoría', icon: '📄' },
-            { id: 'payroll-liquidation', name: 'Liquidación', icon: '💰' },
+            { id: 'payroll-liquidation', name: 'Liquidación Sueldos', icon: '💰' },
             { id: 'employee-map', name: 'Mapa Empleados', icon: '🗺️' },
-            { id: 'training-management', name: 'Capacitaciones', icon: '📚' },
+            { id: 'training-management', name: 'Gestión Capacitaciones', icon: '📚' },
             { id: 'job-postings', name: 'Postulaciones', icon: '💼' },
             { id: 'reports', name: 'Reportes', icon: '📊' },
             { id: 'psychological-assessment', name: 'Evaluación Psicológica', icon: '🧠' },
             { id: 'sanctions-management', name: 'Gestión de Sanciones', icon: '🚫' },
             { id: 'vacation-management', name: 'Gestión de Vacaciones', icon: '🏖️' },
             { id: 'user-support', name: 'Soporte / Tickets', icon: '🎫' },
-            { id: 'logistics-dashboard', name: 'Logística Avanzada', icon: '🚚' },
+            { id: 'logistics-dashboard', name: 'Logistica Avanzada', icon: '🚚' },
             { id: 'procedures-manual', name: 'Manual de Procedimientos', icon: '📖' },
             { id: 'marketplace', name: 'Marketplace', icon: '🛒' },
             { id: 'my-procedures', name: 'Mis Procedimientos', icon: '📋' }
         ];
-        
+
         return modules.map(module => {
             // Verificar si el módulo está contratado
             // Módulos CORE que siempre deben estar visibles
@@ -6019,8 +6020,8 @@
 
                     // COMPLIANCE (3)
                     { id: 'biometric-consent', name: 'Consentimientos Biométricos', icon: '📋' },
-                    { id: 'legal-dashboard', name: 'Gestión Legal', icon: '⚖️' },
-                    { id: 'compliance-dashboard', name: 'Inteligencia de Riesgos', icon: '🛡️' },
+                    { id: 'legal-dashboard', name: 'Legal', icon: '⚖️' },
+                    { id: 'compliance-dashboard', name: 'Compliance Legal', icon: '🛡️' },
 
                     // COMMUNICATION (1)
                     { id: 'notifications-enterprise', name: 'Notificaciones Enterprise V3.0', icon: '🔔' },
@@ -6041,7 +6042,7 @@
                     { id: 'psychological-assessment', name: 'Evaluación Psicológica', icon: '🧠' },
 
                     // MONITORING (1)
-                    { id: 'sla-tracking', name: 'Seguimiento de SLA', icon: '📊' },
+                    { id: 'sla-tracking', name: 'SLA Tracking', icon: '📊' },
 
                     // REPORTS (1)
                     { id: 'audit-reports', name: 'Reportes Auditoría', icon: '📄' },
@@ -6070,7 +6071,7 @@
                     { id: 'plantillas-fiscales', name: 'Plantillas Fiscales', icon: '📋' },
 
                     // LOGISTICS & PROCEDURES (4)
-                    { id: 'logistics-dashboard', name: 'Logística Avanzada', icon: '🚚' },
+                    { id: 'logistics-dashboard', name: 'Logistica Avanzada', icon: '🚚' },
                     { id: 'procedures-manual', name: 'Manual de Procedimientos', icon: '📖' },
                     { id: 'marketplace', name: 'Marketplace', icon: '🛒' },
                     { id: 'my-procedures', name: 'Mis Procedimientos', icon: '📋' }
